<resources>
    <string name="app_name">NightRunning</string>
    <string name="sports_circle">个人中心</string>
    <string name="sports_show">运动展示</string>
    <string name="running">跑步</string>
    <string name="historical_data">历史数据</string>
    <string name="user_route">我的路线</string>
    <string name="training_plan">训练计划</string>
    <string name="login_text">迎着星光出发吧</string>
    <string name="user_login_username_text">用户名</string>
    <string name="user_login_password_text">密码</string>
    <string name="user_login_button_text">登录</string>
    <string name="other_login_mode">其他登录方式</string>
    <string name="text_view_registered">注册账号</string>
    <string name="text_view_forget_password">忘记密码</string>
</resources>
