<?xml version="1.0" encoding="utf-8"?><!--App首页-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LayoutMainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--头部-->
    <LinearLayout
        android:id="@+id/Top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ImageViewMainUserAvatar"
                android:layout_width="0dp"
                android:scaleType="centerCrop"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/user_avatar"/>

            <TextView
                android:id="@+id/TextViewTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:background="@color/colorRed"
                android:gravity="center"
                android:text="@string/sports_show"
                android:textColor="@color/colorPrimary"
                android:textSize="32sp" />
        </LinearLayout>

    </LinearLayout>
    <!--中部:使用Fragment替换-->
    <LinearLayout
        android:id="@+id/LayoutContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:orientation="vertical"></LinearLayout>
    <!--尾部-->
    <LinearLayout
        android:id="@+id/Bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="8dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/ButtonSportsShow"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/sports_show_red" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="10sp"
                android:gravity="center_horizontal"
                android:text="@string/sports_show"
                android:textColor="@color/colorBlack" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/ButtonRunning"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/running_black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="10sp"
                android:gravity="center_horizontal"
                android:text="@string/running"
                android:textColor="@color/colorBlack" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/ButtonSportsCircle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/sports_circle_balck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="10sp"
                android:gravity="center_horizontal"
                android:text="@string/sports_circle"
                android:textColor="@color/colorBlack" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>